terraform/securitygroups.tf
#====================================================
# Security Group Inbound and Outbound
#====================================================
module "whoogle_sg" {
  source  = "terraform-aws-modules/security-group/aws"
  version = "4.16.2"

  name   = "whoogle-sg"
  vpc_id = module.whoogle_vpc.vpc_id

  ingress_rules       = ["https-443-tcp", "http-80-tcp"]
  ingress_cidr_blocks = ["0.0.0.0/0"]
  egress_rules        = ["all-all"]
  egress_cidr_blocks  = ["0.0.0.0/0"]
}

#====================================================
# Security Group Inbound to Container Port 5000
#====================================================
resource "aws_security_group" "ingress_api" {
  name        = "ingress-api"
  description = "Allow ingress to API"
  vpc_id      = module.whoogle_vpc.vpc_id

  ingress {
    from_port   = var.container_port
    to_port     = var.container_port
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
